--- a/practice-for-ch-html-css-aatimes-main/app/views/shared/_main_nav.html.erb
+++ b/practice-for-ch-html-css-aatimes-main/app/views/shared/_main_nav.html.erb
@@ -1,18 +1,33 @@
 <header class="main-nav">
+
 	<nav class="left-nav">
 		<ul>
       <li data-controller="sections-sidebar"> 
         <div id="sections-sidebar-btn" data-action="click->sections-sidebar#toggleSidebar">
           <i class="fa-solid fa-bars"></i>
-          <span>sections</span>
+          <span>SECTIONS</span>
         </div>
       </li>
 			<li data-controller="modal">
         <div id="search-modal-btn" data-action="click->modal#toggleModal">
           <i class="fa-solid fa-magnifying-glass"></i>
-          <span>search</span>
+          <span>SEARCH</span>
         </div>
 			</li>
 		</ul>
 	</nav>
+
+  <nav class="right-nav">
+    <ul>
+      <li>
+        <button>SUBSCRIBE NOW</button>
+      </li>
+      <li>
+        <button>LOG IN</button>
+      </li>
+      <li>
+        <i class="fa-solid fa-gear"></i>
+      </li>
+    </ul>
+  </nav>
 </header>
